--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 
   <servlet>
     <servlet-name>HelloRobot</servlet-name>
-    <servlet-class>com.jcraft.wave_bot.servlet.HelloRobotScalaService</servlet-class>
+    <servlet-class>com.jcraft.wave_bot.servlet.MyRobotServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
